--- a/index.html
+++ b/index.html
@@ -203,7 +203,51 @@
             </div>
         </div>
         </div>
-           
+           <section class="contact-section">
+            <div class="contact-content">
+                <h1>Contact <span>Me</span></h1>
+                <div class="isiconta">
+                    <div class="kiri-conta">
+                        <div>
+                            <p>
+                                Terima kasih telah mengunjungi halaman saya!. Jika Anda memiliki pertanyaan, umpan
+                                balik,
+                                atau
+                                ingin berdiskusi, jangan ragu untuk menghubungi saya melalui formulir di bawah ini. Saya
+                                akan
+                                berusaha untuk merespons setiap pesan dengan cepat dan tepat. Terima kasih atas minat
+                                dan
+                                dukungan Anda!
+                            </p>
+                            <form action="#" name="formvalidasi" id="formvalidasi">
+                                <div class="input-box">
+                                    <div class="input-field">
+                                        <input type="text" name="nama" placeholder="Nama Lengkap" required>
+                                    </div>
+                                </div>
+                                <div class="input-box">
+                                    <div class="input-field">
+                                        <input type="text" name="email" placeholder="Email" required>
+                                    </div>
+                                </div>
+                                <div class="input-box">
+                                    <div class="input-field">
+                                        <input type="text" name="number" placeholder="Nomor hp" required>
+                                    </div>
+                                </div>
+                                <div class="textarea-field">
+                                    <textarea name="message" id="" cols="30" rows="10" placeholder="Pesan"></textarea>
+                                </div>
+                                <div class="submit-btn">
+                                    <button type="submit" id="btnsubmit" value="submit" class="btn">Kirim</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
     <!-- Footer -->
     <footer>
@@ -234,6 +278,7 @@
             <a href="#">©ridwan.com All right reserved 2024</a>
         </div>
     </footer>
-    
+    <script> scr="HTML/script.js"</script>
 </body>
 </html>
+
